# poetry-demo

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_main.py
