[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Pacheco", email = "mdpgd95@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard] (>=0.116.1,<0.117.0)"]

[tool.poetry]
packages = [{ include = "poetry_demo", from = "src" }]

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".venv"
max-line-length = 120

[tool.mypy]
exclude = [
    ".venv/",
]
